<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStart"
            style="@style/ButtonBlue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/label_start_activity_b_for_result" />

        <Button
            android:id="@+id/btnStartService"
            style="@style/ButtonBlue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnStart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/label_start_service" />

        <Button
            android:id="@+id/btnBindService"
            style="@style/ButtonBlue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnStartService"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/label_bind_service" />

    </RelativeLayout>
</layout>